2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.3-mingw32-alpha-1 released.

	* configure.ac (AC_INIT): Adjust version number.
	* srcdist-doc/NEWS.in: Updated; document new features.
	* All files (r0-3-alpha-1): Tag assigned.

2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support assignment of DEBUGLEVEL at configure time.

	* configure.ac (DEBUGLEVEL): Declare as a precious variable, using
	AC_ARG_VAR; also declare with AC_SUBST, to ensure it is initialised.

	* Makefile.in (DEBUGLEVEL): Let AC_SUBST assign it.

2011-05-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around bugs in MinGW and GNU getopt_long_only() implementations.

	* src/getopt.c: New file; this is a free-standing replacement for any
	implementation provided by system libraries.  We will always use this
	to ensure correct operation irrespective of system bugs; (different
	bug manifestations have been identified in the stock MinGW and GNU
	implementations).

	* Makefile.in (mingw-get.EXEEXT): Use it.

	* src/clistub.c (options): Remove redundant declaration of `-v' as a
	long form option.

2011-05-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement user selection of traceable features at run-time.

	* src.pkgopts.h (OPTION_VERBOSE_MAX): New macro; define it.

	* src/debug.h (DEBUG_ENABLED): New macro; define it.
	(DEBUG_REQUEST, DEBUG_REQUEST_FLAGS, DEBUG_TRACE_DYNAMIC): Likewise.

	* src/clistub.c (main) [--trace]: Don't make it available unless...
	[DEBUG_ENABLED(DEBUG_TRACE_DYNAMIC)]: ...this is set (at compile-time).
	[--verbose]: Limit to OPTION_VERBOSE_MAX, using...
	(atmost): ...this new macro; define it.
	(options): Declare `-v' as both long and short form, pending bug fix
	in MinGW's getopt_long_only() implementation.

	* src/pkginet.cpp (pkgInternetAgent::OpenURL): Use DEBUG_REQUEST.
	(pkgInternetLzmaStreamingAgent::TransferData): Likewise.
	(pkgInternetStreamingAgent::TransferData): Likewise.